Fix text in activity page for overflow in table rows for non parsed user activities
* Fixes #1128
* add div tag surrounded label and add `overflow-x: auto` css style properties to child to fix issue with firefox

--- a/src/client/activity/UserActivityActions.less
+++ b/src/client/activity/UserActivityActions.less
@@ -99,6 +99,10 @@
       overflow-x: auto;
       padding: 11px;
       white-space: nowrap;
+
+      > pre {
+        overflow-x: auto;
+      }
     }
 
     &__label {
@@ -109,6 +113,10 @@
       overflow-x: auto;
       padding: 11px;
       width: 30%;
+
+      > div {
+        overflow-x: auto;
+      }
     }
   }
 
